# mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  target.md
app/: streamlit_app.py
docs/superpowers/plans/: 2026-07-08-core-engine-bridge.md  2026-07-08-research-state-agent-api.md
docs/superpowers/specs/: 2026-07-08-core-engine-bridge-design.md  2026-07-08-research-state-agent-design.md
researchgraphos/: __init__.py  agent.py  config.py  core.py  demo_data.py  ingestion.py  llm.py  mcp_bridge.py  models.py  report.py  state.py
tests/: test_agent.py  test_config.py  test_core.py  test_ingestion.py  test_llm.py  test_mcp_bridge.py  test_report.py  test_state.py  test_streamlit_app.py
